--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,6 @@
-name: Selenium Tests with Allure
+name: Selenium Tests with Allure Reports
 
+# Trigger workflow on push or pull request to main
 on:
   push:
     branches: [ main ]
@@ -11,27 +12,33 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    # Step 1: Checkout the repository
     - name: Checkout Repo
       uses: actions/checkout@v3
 
+    # Step 2: Set up latest Python
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: 3.12
 
+    # Step 3: Install dependencies from requirements.txt
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
+    # Step 4: Run Selenium tests and generate Allure results
     - name: Run Selenium Tests
       run: |
         pytest --alluredir=reports/allure
 
+    # Step 5: Generate HTML Allure reports
     - name: Generate Allure HTML Reports
       run: |
         allure generate reports/allure -o reports/allure_reports --clean
 
+    # Step 6: Upload Allure HTML Reports as artifact
     - name: Upload Allure HTML Reports
       uses: actions/upload-artifact@v4
       with:
