--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -13,42 +13,19 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout the repo
       - name: Checkout Repo
         uses: actions/checkout@v3
 
-      # Step 2: Set up Python
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: 3.12
 
-      # Step 3: Install dependencies
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest selenium allure-pytest
+          pip install pytest selenium
 
-      # Step 4: Run the specified test file
       - name: Run Selected Test
         run: |
-          pytest ${{ github.event.inputs.test_file }} --alluredir=reports/allure
-
-      # Step 5: Install Allure CLI for HTML reports
-      - name: Install Allure CLI
-        run: |
-          sudo apt-add-repository ppa:qameta/allure -y
-          sudo apt-get update
-          sudo apt-get install allure -y
-
-      # Step 6: Generate Allure HTML reports
-      - name: Generate Allure HTML Reports
-        run: |
-          allure generate reports/allure -o reports/allure_reports --clean
-
-      # Step 7: Upload reports as artifact
-      - name: Upload Allure HTML Reports
-        uses: actions/upload-artifact@v4
-        with:
-          name: allure-html-report
-          path: reports/allure_reports
+          pytest ${{ github.event.inputs.test_file }}
