--- a/.github/workflows/run_and_post.yml
+++ b/.github/workflows/run_and_post.yml
@@ -24,8 +24,17 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest selenium
+          pip install pytest pytest-html selenium
 
-      - name: Run Selected Test
+      - name: Run Selected Test and Generate HTML Report
         run: |
-          pytest ${{ github.event.inputs.test_file }}
+          mkdir -p reports/html
+          pytest ${{ github.event.inputs.test_file }} \
+            --html=reports/html/report.html \
+            --self-contained-html
+
+      - name: Upload HTML Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: pytest-html-report
+          path: reports/html/
